remove wallet, use account instead

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,6 @@
     <color name="colorMain">#AB2126</color>
     <color name="colorBubble">#99000000</color>
     <color name="colorGreen">#65C87A</color>
-
+    <color name="colorGreyTitle">#999999</color>
 
 </resources>
