--- a/app/src/main/res/layout/activity_sneaker_info.xml
+++ b/app/src/main/res/layout/activity_sneaker_info.xml
@@ -8,14 +8,31 @@
         android:background="@mipmap/test_background"
         tools:context=".screens.activity.SneakerInfoActivity">
 
-    <ImageView
-            android:src="@mipmap/logo"
-            android:layout_width="@dimen/logo_width"
-            android:layout_height="@dimen/logo_heigh"
+    <RelativeLayout
             android:id="@+id/imageView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentTop="true"/>
+            android:layout_marginHorizontal="@dimen/layout_padding_Horizontal"
+    >
+
+        <ImageView
+                android:id="@+id/btnBackValidate"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_back_arrow"
+                android:padding="10dp"
+                android:layout_marginLeft="-18dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"/>
+
+        <ImageView
+                android:src="@mipmap/logo"
+                android:layout_width="@dimen/logo_width"
+                android:layout_height="@dimen/logo_heigh"
+                android:layout_centerHorizontal="true"/>
+
+    </RelativeLayout>
 
     <ScrollView
             android:layout_width="match_parent"
@@ -67,7 +84,7 @@
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Detail"
+                            android:text="Product"
                             android:textColor="@android:color/white"
                             android:textSize="23dp"
                     />
@@ -97,7 +114,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Id:"
-                            android:textColor="@android:color/white"
+                            android:textColor="@color/colorGreyTitle"
                             android:textSize="17dp"
                             android:textStyle="bold"
                     />
@@ -121,7 +138,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Brand:"
-                            android:textColor="@android:color/white"
+                            android:textColor="@color/colorGreyTitle"
                             android:textSize="17dp"
                             android:textStyle="bold"
                     />
@@ -145,7 +162,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Model:"
-                            android:textColor="@android:color/white"
+                            android:textColor="@color/colorGreyTitle"
                             android:textSize="17dp"
                             android:textStyle="bold"
                     />
@@ -169,7 +186,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Colorway:"
-                            android:textColor="@android:color/white"
+                            android:textColor="@color/colorGreyTitle"
                             android:textSize="17dp"
                             android:textStyle="bold"
                     />
@@ -193,7 +210,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Release date:"
-                            android:textColor="@android:color/white"
+                            android:textColor="@color/colorGreyTitle"
                             android:textSize="17dp"
                             android:textStyle="bold"
                     />
@@ -217,7 +234,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Size:"
-                            android:textColor="@android:color/white"
+                            android:textColor="@color/colorGreyTitle"
                             android:textSize="17dp"
                             android:textStyle="bold"
                     />
@@ -241,7 +258,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Condition:"
-                            android:textColor="@android:color/white"
+                            android:textColor="@color/colorGreyTitle"
                             android:textSize="17dp"
                             android:textStyle="bold"
                     />
@@ -261,13 +278,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Owner's address:"
-                        android:textColor="@android:color/white"
+                        android:textColor="@color/colorGreyTitle"
                         android:textSize="17dp"
                         android:textStyle="bold"
                 />
 
                 <TextView
-                        android:layout_marginLeft="30dp"
+                        android:layout_marginLeft="15dp"
                         android:layout_marginTop="5dp"
                         android:id="@+id/tvItemOwnerAddress"
                         android:layout_width="match_parent"
@@ -295,7 +312,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Brand:"
-                            android:textColor="@android:color/white"
+                            android:textColor="@color/colorGreyTitle"
                             android:textSize="17dp"
                             android:textStyle="bold"
                     />
@@ -319,7 +336,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Physical address:"
-                            android:textColor="@android:color/white"
+                            android:textColor="@color/colorGreyTitle"
                             android:textSize="17dp"
                             android:textStyle="bold"
                     />
@@ -348,47 +365,20 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
 
-            <android.support.constraint.ConstraintLayout
-                    android:id="@+id/layoutButtonOwner"
-                    android:layout_width="match_parent"
+            <Button
+                    android:text="@string/strButton_Sell"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
+                    android:paddingVertical="@dimen/button_padding_vertical"
+                    android:paddingHorizontal="38dp"
+                    android:textAllCaps="false"
+                    android:textColor="@color/colorWhite"
+                    android:background="@drawable/main_button"
+                    android:textSize="@dimen/button_text_size"
+                    android:id="@+id/btnSellValidate"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginBottom="20dp"
-                    android:visibility="gone">
-
-                <Button
-                        android:text="@string/strButton_Back"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingVertical="@dimen/button_padding_vertical"
-                        android:paddingHorizontal="38dp"
-                        android:textAllCaps="false"
-                        android:textColor="@color/colorWhite"
-                        android:background="@drawable/main_button"
-                        android:textSize="@dimen/button_text_size"
-                        android:id="@+id/btnBackValidate"
-                        app:layout_constraintStart_toStartOf="parent"
-                        android:layout_marginStart="@dimen/layout_padding_Horizontal"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
-
-                <Button
-                        android:text="@string/strButton_Sell"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingVertical="@dimen/button_padding_vertical"
-                        android:paddingHorizontal="38dp"
-                        android:textAllCaps="false"
-                        android:textColor="@color/colorWhite"
-                        android:background="@drawable/main_button"
-                        android:textSize="@dimen/button_text_size"
-                        android:id="@+id/btnSellValidate"
-                        android:layout_marginEnd="@dimen/layout_padding_Horizontal"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
-
-            </android.support.constraint.ConstraintLayout>
+                    android:visibility="gone"/>
 
             <Button
                     android:text="@string/strButton_Done"
