--- a/app/src/main/res/layout/fragment_restore.xml
+++ b/app/src/main/res/layout/fragment_restore.xml
@@ -75,7 +75,7 @@
                         android:id="@+id/textView2"/>
                 <EditText
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/edittext_height"
                         android:inputType="textPersonName"
                         android:layout_marginTop="5dp"
                         android:textColor="@color/colorWhite"
@@ -115,7 +115,7 @@
                         android:id="@+id/textView4"/>
                 <EditText
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="@dimen/edittext_height"
                         android:inputType="textPassword"
                         android:layout_marginTop="5dp"
                         android:textColor="@color/colorWhite"
@@ -123,6 +123,72 @@
                         android:background="@android:color/transparent"
                         android:ems="10"
                         android:id="@+id/etPasswordRestore"/>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginBottom="@dimen/cardView_margin_bottom"
+                card_view:cardBackgroundColor="@android:color/transparent"
+                card_view:cardElevation="4dp"
+                card_view:cardCornerRadius="10dp">
+
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="10dp"
+                    android:paddingHorizontal="20dp"
+                    android:background="@drawable/bubble_background">
+
+                <android.support.constraint.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical"
+                >
+
+                    <TextView
+                            android:text="@string/label_private_key"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/text_size"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorWhite"
+                            android:id="@+id/textView5"
+                            card_view:layout_constraintStart_toStartOf="parent"
+                            android:layout_marginStart="8dp"
+                            android:layout_marginTop="8dp"
+                            card_view:layout_constraintTop_toTopOf="parent"
+                            android:layout_marginBottom="8dp"
+                            card_view:layout_constraintBottom_toBottomOf="parent"/>
+
+                    <ImageView
+                            android:id="@+id/btnScanPrivateKey"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:src="@drawable/ic_scan"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"/>
+
+                </android.support.constraint.ConstraintLayout>
+
+                <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/edittext_height"
+                        android:inputType="textPassword"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/text_size"
+                        android:background="@android:color/transparent"
+                        android:ems="10"
+                        android:id="@+id/etPrivateKey"/>
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
