complete transfer + create new

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,6 @@
     <color name="colorBubble">#99000000</color>
     <color name="colorGreen">#65C87A</color>
     <color name="colorGreyTitle">#999999</color>
+    <color name="colorYellow">#dba622</color>
 
 </resources>
