--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -2,20 +2,36 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@mipmap/test_background"
         tools:context=".screens.activity.CollectionActivity">
 
-    <ImageView
-            android:src="@mipmap/logo"
-            android:layout_width="@dimen/logo_width"
-            android:layout_height="@dimen/logo_heigh"
+    <RelativeLayout
             android:id="@+id/imageView3"
-            android:layout_marginTop="10dp"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentTop="true"/>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/logo_margin_top"
+            android:layout_marginHorizontal="@dimen/layout_padding_Horizontal"
+    >
+
+        <ImageView
+                android:id="@+id/btnBackCollection"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_back_arrow"
+                android:padding="10dp"
+                android:layout_marginLeft="-18dp"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"/>
+
+        <ImageView
+                android:src="@mipmap/logo"
+                android:layout_width="@dimen/logo_width"
+                android:layout_height="@dimen/logo_heigh"
+                android:layout_centerHorizontal="true"/>
+
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerCollection"
@@ -23,7 +39,7 @@
             android:layout_height="match_parent"
             android:layout_below="@+id/imageView3"
             android:layout_above="@+id/textView3"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="@dimen/copyright_margin_bottom">
 
     </android.support.v7.widget.RecyclerView>
