--- a/app/src/main/res/layout/activity_sneaker_info.xml
+++ b/app/src/main/res/layout/activity_sneaker_info.xml
@@ -12,7 +12,7 @@
             android:id="@+id/imageView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/logo_margin_top"
             android:layout_marginHorizontal="@dimen/layout_padding_Horizontal"
     >
 
