--- a/app/src/main/res/layout/layout_drawer_menu.xml
+++ b/app/src/main/res/layout/layout_drawer_menu.xml
@@ -13,7 +13,7 @@
             android:layout_height="@dimen/logo_heigh"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/logo_margin_top"
             app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/imageView5"/>
     <LinearLayout
@@ -27,30 +27,6 @@
             app:layout_constraintEnd_toEndOf="parent" >
 
         <Button
-                android:text="Manage Wallet"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/drawer_button_height"
-                android:textAllCaps="false"
-                android:background="@android:color/transparent"
-                android:textColor="@color/colorWhite"
-                android:textAlignment="viewStart"/>
-        <Button
-                android:text="Change Password"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/drawer_button_height"
-                android:textAllCaps="false"
-                android:background="@android:color/transparent"
-                android:textColor="@color/colorWhite"
-                android:textAlignment="viewStart"/>
-        <Button
-                android:text="Recovery Phrase"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/drawer_button_height"
-                android:textAllCaps="false"
-                android:background="@android:color/transparent"
-                android:textColor="@color/colorWhite"
-                android:textAlignment="viewStart"/>
-        <Button
                 android:id="@+id/btnCollection"
                 android:text="Collection"
                 android:layout_width="match_parent"
@@ -59,6 +35,26 @@
                 android:background="@android:color/transparent"
                 android:textColor="@color/colorWhite"
                 android:textAlignment="viewStart"/>
+
+        <Button
+                android:id="@+id/btnManageAccount"
+                android:text="Manage Account"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/drawer_button_height"
+                android:textAllCaps="false"
+                android:background="@android:color/transparent"
+                android:textColor="@color/colorWhite"
+                android:textAlignment="viewStart"/>
+
+        <Button
+                android:text="Change Password"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/drawer_button_height"
+                android:textAllCaps="false"
+                android:background="@android:color/transparent"
+                android:textColor="@color/colorWhite"
+                android:textAlignment="viewStart"/>
+
     </LinearLayout>
 
     <Button
