--- a/app/src/main/res/layout/fragment_restore.xml
+++ b/app/src/main/res/layout/fragment_restore.xml
@@ -162,10 +162,8 @@
                             android:textColor="@color/colorWhite"
                             android:id="@+id/textView5"
                             card_view:layout_constraintStart_toStartOf="parent"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginTop="8dp"
                             card_view:layout_constraintTop_toTopOf="parent"
-                            android:layout_marginBottom="8dp"
+
                             card_view:layout_constraintBottom_toBottomOf="parent"/>
 
                     <ImageView
@@ -182,10 +180,11 @@
                 <EditText
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/edittext_height"
-                        android:inputType="textPassword"
                         android:layout_marginTop="5dp"
                         android:textColor="@color/colorWhite"
                         android:textSize="@dimen/text_size"
+                        android:maxLines="1"
+                        android:inputType="text"
                         android:background="@android:color/transparent"
                         android:ems="10"
                         android:id="@+id/etPrivateKey"/>
