--- a/app/src/main/res/layout/item_collection.xml
+++ b/app/src/main/res/layout/item_collection.xml
@@ -14,6 +14,7 @@
             android:paddingVertical="10dp"
             android:paddingHorizontal="20dp"
             android:layout_marginHorizontal="15dp"
+            android:gravity="center"
             android:background="@drawable/bubble_background"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -21,8 +22,8 @@
 
         <ImageView
                 android:id="@+id/ivSneakerImage"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:src="@drawable/sneaker_image_sample"/>
 
         <LinearLayout
@@ -105,6 +106,37 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@android:color/white"/>
+
+            <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end">
+
+                <TextView
+                        android:id="@+id/tvReportStolen"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Report Stolen"
+                        android:background="@drawable/report_stolen_button"
+                        android:textColor="@android:color/white"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:textSize="10dp"
+                        android:paddingVertical="3dp"
+                        android:paddingStart="30dp"
+                        android:paddingEnd="8dp"
+                        android:visibility="gone"
+                />
+
+                <ImageView
+                        android:id="@+id/btnReportStolen"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:padding="5dp"
+                        android:background="@drawable/circle_button"
+                        android:src="@drawable/ic_report_stolen"/>
+
+            </FrameLayout>
 
         </LinearLayout>
     </LinearLayout>
