--- a/app/src/main/res/layout/fragment_restore.xml
+++ b/app/src/main/res/layout/fragment_restore.xml
@@ -17,7 +17,7 @@
             android:layout_marginTop="25dp"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout">
         <Button
-                android:text="@string/strButton_Next"
+                android:text="@string/strButton_Import"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:paddingHorizontal="28dp"
@@ -26,7 +26,8 @@
                 android:textColor="@color/colorWhite"
                 android:background="@drawable/main_button"
                 android:textSize="@dimen/button_text_size"
-                android:id="@+id/btnNextRestore"/>
+                android:id="@+id/btnNextRestore"
+                android:visibility="gone"/>
     </LinearLayout>
     <TextView
             android:text="@string/copyright"
@@ -47,85 +48,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/linearLayout">
-        <android.support.v7.widget.CardView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="8dp"
-                android:layout_marginBottom="@dimen/cardView_margin_bottom"
-                card_view:cardBackgroundColor="@android:color/transparent"
-                card_view:cardElevation="4dp"
-                card_view:cardCornerRadius="10dp">
-
-            <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingVertical="10dp"
-                    android:paddingHorizontal="20dp"
-                    android:background="@drawable/bubble_background">
-                <TextView
-                        android:text="@string/user_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/text_size"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorWhite"
-                        android:id="@+id/textView2"/>
-                <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/edittext_height"
-                        android:inputType="textPersonName"
-                        android:layout_marginTop="5dp"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="@dimen/text_size"
-                        android:background="@android:color/transparent"
-                        android:ems="10"
-                        android:id="@+id/etUserNameRestore"/>
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="8dp"
-                android:layout_marginBottom="@dimen/cardView_margin_bottom"
-                card_view:cardBackgroundColor="@android:color/transparent"
-                card_view:cardElevation="4dp"
-                card_view:cardCornerRadius="10dp">
-
-            <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingVertical="10dp"
-                    android:paddingHorizontal="20dp"
-                    android:background="@drawable/bubble_background">
-                <TextView
-                        android:text="@string/pin"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/text_size"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorWhite"
-                        android:id="@+id/textView4"/>
-                <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/edittext_height"
-                        android:inputType="textPassword"
-                        android:layout_marginTop="5dp"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="@dimen/text_size"
-                        android:background="@android:color/transparent"
-                        android:ems="10"
-                        android:id="@+id/etPasswordRestore"/>
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
                 xmlns:android="http://schemas.android.com/apk/res/android"
@@ -188,6 +110,103 @@
                         android:background="@android:color/transparent"
                         android:ems="10"
                         android:id="@+id/etPrivateKey"/>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <Button
+                android:id="@+id/btnCheckPrivateKey"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Check"
+                android:layout_gravity="end"
+                android:layout_marginBottom="15dp"
+                android:paddingHorizontal="28dp"
+                android:textAllCaps="false"
+                android:textColor="@color/colorWhite"
+                android:background="@drawable/main_button"
+                android:textSize="@dimen/button_text_size"/>
+
+        <android.support.v7.widget.CardView
+                android:id="@+id/cartEmail"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginBottom="@dimen/cardView_margin_bottom"
+                card_view:cardBackgroundColor="@android:color/transparent"
+                card_view:cardElevation="4dp"
+                card_view:cardCornerRadius="10dp"
+                android:visibility="gone">
+
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="10dp"
+                    android:paddingHorizontal="20dp"
+                    android:background="@drawable/bubble_background">
+                <TextView
+                        android:text="@string/user_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/text_size"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorWhite"
+                        android:id="@+id/textView2"/>
+                <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/edittext_height"
+                        android:inputType="textPersonName"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/text_size"
+                        android:background="@android:color/transparent"
+                        android:ems="10"
+                        android:id="@+id/etUserNameRestore"/>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+                android:id="@+id/cartPassword"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginBottom="@dimen/cardView_margin_bottom"
+                card_view:cardBackgroundColor="@android:color/transparent"
+                card_view:cardElevation="4dp"
+                card_view:cardCornerRadius="10dp"
+                android:visibility="gone">
+
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingVertical="10dp"
+                    android:paddingHorizontal="20dp"
+                    android:background="@drawable/bubble_background">
+                <TextView
+                        android:text="@string/pin"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/text_size"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorWhite"
+                        android:id="@+id/textView4"/>
+                <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/edittext_height"
+                        android:inputType="textPassword"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/text_size"
+                        android:background="@android:color/transparent"
+                        android:ems="10"
+                        android:id="@+id/etPasswordRestore"/>
             </LinearLayout>
 
         </android.support.v7.widget.CardView>
