--- a/app/src/main/res/layout/item_collection.xml
+++ b/app/src/main/res/layout/item_collection.xml
@@ -114,18 +114,18 @@
 
                 <TextView
                         android:id="@+id/tvReportStolen"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="Report Stolen"
                         android:background="@drawable/report_stolen_button"
                         android:textColor="@android:color/white"
                         android:layout_gravity="center"
                         android:gravity="center"
+                        android:lines="1"
                         android:textSize="10dp"
                         android:paddingVertical="3dp"
                         android:paddingStart="30dp"
                         android:paddingEnd="8dp"
-                        android:visibility="gone"
                 />
 
                 <ImageView
