--- a/app/src/main/res/layout/fragment_confirm_register.xml
+++ b/app/src/main/res/layout/fragment_confirm_register.xml
@@ -41,7 +41,7 @@
             android:paddingVertical="@dimen/tuto_padding_vertical"
             android:paddingHorizontal="@dimen/layout_padding_Horizontal"
             android:background="@drawable/bubble_background"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@+id/imageView4">
 
         <TextView
@@ -83,9 +83,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
-                android:layout_marginTop="30dp"
-                android:textSize="@dimen/text_title_size"
-                android:text="Note: You needs to wait 10 minutes to receive money to create your first transaction"/>
+                android:textSize="@dimen/text_size"
+                android:text="Note: You needs to wait 5 minutes to receive money to create your first transaction"/>
 
     </LinearLayout>
 
@@ -95,7 +94,7 @@
             android:layout_height="wrap_content"
             android:paddingHorizontal="28dp"
             android:textAllCaps="false"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="20dp"
             android:textColor="@color/colorWhite"
             android:background="@drawable/main_button"
             android:textSize="@dimen/button_text_size"
