--- a/app/src/main/res/drawable/warning_background.xml
+++ b/app/src/main/res/drawable/warning_background.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
-    <stroke android:color="@color/colorBlack"
-            android:width="1dp"/>
+    <solid android:color="@color/colorOrangish_alpha_15"/>
     <corners android:radius="4dp" />
 </shape>
