--- a/app/src/main/res/layout/fragment_create_new.xml
+++ b/app/src/main/res/layout/fragment_create_new.xml
@@ -1,181 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingHorizontal="@dimen/layout_padding_Horizontal"
-        android:background="@mipmap/test_background"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        tools:context=".screens.authenticationScreen.CreateNewFragment">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingTop="@dimen/activity_margin_18dp"
+    android:paddingHorizontal="@dimen/activity_margin_24dp"
+    tools:context=".screens.authenticationScreen.CreateNewFragment">
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_back"
+        android:background="@android:color/transparent"
+        android:paddingVertical="@dimen/activity_margin_10dp"
+        android:paddingRight="@dimen/activity_margin_10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="@dimen/activity_margin_16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/ibBack"/>
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/label_create_account"
+        android:textSize="@dimen/text_size_big"
+        android:textColor="@color/colorBlack"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/ibBack"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="25dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
-        <Button
-                android:text="@string/strButton_Next"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingHorizontal="28dp"
-                android:textAllCaps="false"
-                android:layout_marginBottom="10dp"
-                android:textColor="@color/colorWhite"
-                android:background="@drawable/main_button"
-                android:textSize="@dimen/button_text_size"
-                android:id="@+id/btnNextCreate"/>
-    </LinearLayout>
-    <TextView
-            android:text="@string/copyright"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/colorWhite"
-            android:id="@+id/textView3"
-            android:textSize="@dimen/copyright_text_size"
-            android:layout_marginBottom="@dimen/copyright_margin_bottom"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-    <LinearLayout
-            android:orientation="vertical"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        android:layout_marginTop="40dp"
+        android:id="@+id/linearLayout">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textPersonName"
+            android:textSize="@dimen/text_size_large"
+            android:hint="@string/text_holder_user_name"
+            android:id="@+id/etUserName"
+            android:drawableLeft="@drawable/ic_user"
+            android:drawablePadding="@dimen/activity_margin_12dp"
+            android:paddingVertical="@dimen/activity_margin_12dp"
+            android:paddingHorizontal="@dimen/activity_margin_16dp"
+            android:layout_marginBottom="@dimen/activity_margin_16dp"
+            android:background="@drawable/bubble_background">
+        </EditText>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textPersonName"
+            android:textSize="@dimen/text_size_large"
+            android:hint="@string/text_holder_user_email"
+            android:id="@+id/etUserEmail"
+            android:drawableLeft="@drawable/ic_email"
+            android:drawablePadding="@dimen/activity_margin_12dp"
+            android:paddingVertical="@dimen/activity_margin_12dp"
+            android:paddingHorizontal="@dimen/activity_margin_16dp"
+            android:layout_marginBottom="@dimen/activity_margin_16dp"
+            android:background="@drawable/bubble_background">
+        </EditText>
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/linearLayout">
-        <android.support.v7.widget.CardView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:background="@drawable/bubble_background">
+
+            <EditText
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="8dp"
-                android:layout_marginBottom="@dimen/cardView_margin_bottom"
-                card_view:cardBackgroundColor="@android:color/transparent"
-                card_view:cardElevation="4dp"
-                card_view:cardCornerRadius="10dp">
+                android:layout_height="wrap_content"
+                android:inputType="numberPassword"
+                android:textSize="@dimen/text_size_large"
+                android:maxLength="6"
+                android:hint="@string/text_holder_user_password"
+                android:id="@+id/etUserPassword"
+                android:drawableLeft="@drawable/ic_password"
+                android:drawablePadding="@dimen/activity_margin_12dp"
+                android:paddingVertical="@dimen/activity_margin_12dp"
+                android:paddingHorizontal="@dimen/activity_margin_16dp"
+                android:background="@android:color/transparent"
+                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@+id/btnShowPassword"/>
 
-            <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingVertical="10dp"
-                    android:paddingHorizontal="20dp"
-                    android:background="@drawable/bubble_background">
-                <TextView
-                        android:text="@string/user_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/text_size"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorWhite"
-                        android:id="@+id/textView2"/>
-                <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textPersonName"
-                        android:layout_marginTop="5dp"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="@dimen/text_size"
-                        android:background="@android:color/transparent"
-                        android:ems="10"
-                        android:id="@+id/etUserNameCreate"/>
-            </LinearLayout>
+            <ImageView
+                android:id="@+id/btnShowPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_show_password"
+                android:paddingHorizontal="@dimen/activity_margin_16dp"
+                android:paddingVertical="@dimen/activity_margin_12dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"/>
 
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="8dp"
-                android:layout_marginBottom="@dimen/cardView_margin_bottom"
-                card_view:cardBackgroundColor="@android:color/transparent"
-                card_view:cardElevation="4dp"
-                card_view:cardCornerRadius="10dp">
-
-            <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingVertical="10dp"
-                    android:paddingHorizontal="20dp"
-                    android:background="@drawable/bubble_background">
-                <TextView
-                        android:text="@string/pin"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/text_size"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorWhite"
-                        android:id="@+id/textView4"/>
-                <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textPassword"
-                        android:layout_marginTop="5dp"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="@dimen/text_size"
-                        android:background="@android:color/transparent"
-                        android:ems="10"
-                        android:id="@+id/etPasswordCreate"/>
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="8dp"
-                android:layout_marginBottom="@dimen/cardView_margin_bottom"
-                card_view:cardBackgroundColor="@android:color/transparent"
-                card_view:cardElevation="4dp"
-                card_view:cardCornerRadius="10dp">
-
-            <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingVertical="10dp"
-                    android:paddingHorizontal="20dp"
-                    android:background="@drawable/bubble_background">
-                <TextView
-                        android:text="@string/pin_reenter"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/text_size"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorWhite"
-                        android:id="@+id/textView5"/>
-                <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:inputType="textPassword"
-                        android:layout_marginTop="5dp"
-                        android:textColor="@color/colorWhite"
-                        android:textSize="@dimen/text_size"
-                        android:background="@android:color/transparent"
-                        android:ems="10"
-                        android:id="@+id/etConfirmPasswordCreate"/>
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
+        </RelativeLayout>
 
     </LinearLayout>
-    <ImageView
-            android:src="@mipmap/logo"
-            android:layout_width="@dimen/logo_width"
-            android:layout_height="@dimen/logo_heigh"
-            android:id="@+id/imageView4"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="60dp"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
+
+    <TextView
+        android:id="@+id/btnRegister"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/drawable_btn_green_gradient_selector"
+        android:text="@string/label_button_register"
+        android:layout_marginBottom="@dimen/activity_margin_24dp"
+        android:textColor="@color/colorWhite"
+        android:enabled="false"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:textSize="@dimen/text_size_xlarge"
+        android:padding="@dimen/activity_margin_16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+    />
+
+    <TextView
+        android:id="@+id/tvWarning"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Oops!\nThis email is taken already!"
+        android:layout_marginTop="@dimen/activity_margin_16dp"
+        android:padding="@dimen/activity_margin_12dp"
+        android:textColor="@color/colorOrangish"
+        android:lineSpacingExtra="4dp"
+        android:textSize="@dimen/text_size_large"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        android:background="@drawable/warning_background"
+        android:visibility="gone"
+    />
 
 </android.support.constraint.ConstraintLayout>
