--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,15 @@
     <color name="colorGreyTitle">#999999</color>
     <color name="colorYellow">#dba622</color>
 
+    <color name="colorBlueGreen">#146062</color>
+    <color name="colorDarkTurquoise">#095255</color>
+    <color name="colorOffWhite">#fefdf6</color>
+    <color name="colorOrangish">#ff773f</color>
+    <color name="colorOrangish_alpha_15">#26ff773f</color>
+    <color name="colorDark">#19181b</color>
+    <color name="colorOrangeyRed">#ff3b30</color>
+    <color name="colorPutty">#b0aca8</color>
+    <color name="colorDark70">#19181b</color>
+    <color name="colorSeafoamBlue">#75d48b</color>
+
 </resources>
