--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -165,7 +165,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@android:color/transparent"
-            android:layout_gravity="start"
+            android:layout_gravity="end"
             android:fitsSystemWindows="true">
 
         <include layout="@layout/layout_drawer_menu"/>
