--- a/app/src/main/res/layout/layout_drawer_menu.xml
+++ b/app/src/main/res/layout/layout_drawer_menu.xml
@@ -1,74 +1,210 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:background="@color/colorBlack"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools" android:background="@drawable/bg_navigation"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <ImageView
-            android:src="@mipmap/logo"
-            android:layout_width="@dimen/logo_width"
-            android:layout_height="@dimen/logo_heigh"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="@dimen/logo_margin_top"
-            app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/imageView5"/>
     <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
+        android:id="@+id/lnTopNavigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center_horizontal"
+        android:paddingHorizontal="@dimen/activity_margin_16dp"
+        android:paddingVertical="@dimen/activity_margin_24dp"
+        android:background="@color/colorDarkTurquoise"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:src="@drawable/ic_default_sneaker_header_navigation"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
-            android:paddingLeft="@dimen/drawer_padding_left"
-            app:layout_constraintTop_toBottomOf="@+id/imageView5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" >
+            android:layout_marginTop="@dimen/activity_margin_36dp"/>
 
-        <Button
-                android:id="@+id/btnCollection"
-                android:text="Collection"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/drawer_button_height"
-                android:textAllCaps="false"
-                android:background="@android:color/transparent"
-                android:textColor="@color/colorWhite"
-                android:textAlignment="viewStart"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Harmen Porter"
+            android:textStyle="bold"
+            android:textSize="@dimen/text_size_xlarge"
+            android:textColor="@color/colorOffWhite"
+            android:layout_marginTop="@dimen/activity_margin_16dp"/>
 
-        <Button
-                android:id="@+id/btnManageAccount"
-                android:text="Manage Account"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/drawer_button_height"
-                android:textAllCaps="false"
-                android:background="@android:color/transparent"
-                android:textColor="@color/colorWhite"
-                android:textAlignment="viewStart"/>
-
-        <Button
-                android:text="Change Password"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/drawer_button_height"
-                android:textAllCaps="false"
-                android:background="@android:color/transparent"
-                android:textColor="@color/colorWhite"
-                android:textAlignment="viewStart"/>
-
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5Kb8kLf9zgWQnogidDA76MzPL6eewererwer"
+            android:maxLines="1"
+            android:gravity="center"
+            android:ellipsize="end"
+            android:textSize="@dimen/text_size_default"
+            android:textColor="@color/colorOffWhite"
+            android:drawableLeft="@drawable/ic_location"
+            android:layout_marginTop="@dimen/activity_margin_24dp"
+            android:drawablePadding="@dimen/activity_margin_8dp"
+            android:paddingHorizontal="@dimen/activity_margin_16dp"
+            android:paddingVertical="13dp"
+            android:background="@drawable/bg_darkTurquoise_shadow_corners"
+            android:visibility="gone"/>
     </LinearLayout>
 
-    <Button
-            android:id="@+id/btnUnlinkWalletMain"
-            android:text="Unlink Your Wallet"
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_expand_down"
+        app:layout_constraintTop_toBottomOf="@+id/lnTopNavigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_margin_24dp"
+        app:layout_constraintTop_toBottomOf="@+id/lnTopNavigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tvLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAllCaps="false"
-            android:background="@android:color/transparent"
-            android:textColor="@color/colorYellow"
-            android:textAlignment="viewStart"
-            android:paddingLeft="@dimen/drawer_padding_left"
-            android:layout_marginBottom="40dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:text="@string/label_button_login"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/ic_user"
+            android:drawableTint="@color/colorWhite"
+            android:textSize="@dimen/text_size_large"
+            android:textColor="@color/colorWhite"
+            android:drawablePadding="@dimen/activity_margin_12dp"
+            android:paddingHorizontal="@dimen/activity_margin_24dp"
+            android:paddingVertical="@dimen/activity_margin_12dp"
+        />
+
+        <TextView
+            android:id="@+id/tvCreateNew"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/label_button_create_new_account"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/ic_plus_circle"
+            android:drawableTint="@color/colorWhite"
+            android:textSize="@dimen/text_size_large"
+            android:textColor="@color/colorWhite"
+            android:drawablePadding="@dimen/activity_margin_12dp"
+            android:paddingHorizontal="@dimen/activity_margin_24dp"
+            android:paddingVertical="@dimen/activity_margin_12dp"
+        />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/activity_margin_24dp"
+        app:layout_constraintTop_toBottomOf="@+id/lnTopNavigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/tvProfile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/label_button_profile"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/ic_user"
+            android:drawableTint="@color/colorWhite"
+            android:textSize="@dimen/text_size_large"
+            android:textColor="@color/colorWhite"
+            android:drawablePadding="@dimen/activity_margin_12dp"
+            android:paddingHorizontal="@dimen/activity_margin_24dp"
+            android:paddingVertical="@dimen/activity_margin_12dp"
+        />
+
+        <TextView
+            android:id="@+id/tvCollection"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/label_button_collection"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/ic_collection"
+            android:drawableTint="@color/colorWhite"
+            android:textSize="@dimen/text_size_large"
+            android:textColor="@color/colorWhite"
+            android:drawablePadding="@dimen/activity_margin_12dp"
+            android:paddingHorizontal="@dimen/activity_margin_24dp"
+            android:paddingVertical="@dimen/activity_margin_12dp"
+        />
+
+        <TextView
+            android:id="@+id/tvCardManage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/label_button_card_manage"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/ic_payment_cards"
+            android:drawableTint="@color/colorWhite"
+            android:textSize="@dimen/text_size_large"
+            android:textColor="@color/colorWhite"
+            android:drawablePadding="@dimen/activity_margin_12dp"
+            android:paddingHorizontal="@dimen/activity_margin_24dp"
+            android:paddingVertical="@dimen/activity_margin_12dp"
+        />
+
+        <TextView
+            android:id="@+id/tvSetting"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/label_button_setting"
+            android:gravity="center_vertical"
+            android:drawableLeft="@drawable/ic_setting"
+            android:drawableTint="@color/colorWhite"
+            android:textSize="@dimen/text_size_large"
+            android:textColor="@color/colorWhite"
+            android:drawablePadding="@dimen/activity_margin_12dp"
+            android:paddingHorizontal="@dimen/activity_margin_24dp"
+            android:paddingVertical="@dimen/activity_margin_12dp"
+        />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvLogout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/label_button_logout"
+        android:gravity="center_vertical"
+        android:drawableLeft="@drawable/ic_logout"
+        android:drawableTint="@color/colorWhite"
+        android:textSize="@dimen/text_size_large"
+        android:textColor="@color/colorWhite"
+        android:drawablePadding="@dimen/activity_margin_12dp"
+        android:paddingHorizontal="@dimen/activity_margin_24dp"
+        android:paddingVertical="@dimen/activity_margin_12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="90dp"
+        android:visibility="gone"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/activity_margin_16dp"
+        android:layout_marginBottom="@dimen/activity_margin_16dp"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/label_app_version"
+            android:textColor="@color/colorOffWhite"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"/>
+
+    </RelativeLayout>
+
 </android.support.constraint.ConstraintLayout>
