change ui main screen, add xml view pager
implement expanded state of navigation bar
change ui main screen, add xml view pager, create pager fragments

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
 
     <color name="colorBlueGreen">#146062</color>
     <color name="colorDarkTurquoise">#095255</color>
+    <color name="colorDarkTurquoise_alpha_50">#80095255</color>
     <color name="colorOffWhite">#fefdf6</color>
     <color name="colorOrangish">#ff773f</color>
     <color name="colorOrangish_alpha_15">#26ff773f</color>
@@ -30,5 +31,7 @@
     <color name="colorOrangeyRed">#ff3b30</color>
     <color name="colorPutty">#b0aca8</color>
     <color name="colorSeafoamBlue">#75d48b</color>
+    <color name="black_with_alpha_10">#1A000000</color>
+    <color name="greyishBrown">#4a4a4a</color>
 
 </resources>
