--- a/app/src/main/res/drawable/drawable_btn_green_alpha_selector.xml
+++ b/app/src/main/res/drawable/drawable_btn_green_alpha_selector.xml
@@ -4,7 +4,7 @@
     <item android:state_enabled="false">
         <shape>
             <solid android:color="@color/colorPutty" />
-            <corners android:radius="@dimen/dimen_radius_button_6dp" />
+            <corners android:radius="@dimen/dimen_radius_button_4dp" />
 
         </shape>
 
@@ -12,7 +12,7 @@
     <item android:state_pressed="true">
         <shape>
             <solid android:color="@color/colorDarkTurquoise" />
-            <corners android:radius="@dimen/dimen_radius_button_6dp" />
+            <corners android:radius="@dimen/dimen_radius_button_4dp" />
 
         </shape>
 
@@ -20,11 +20,8 @@
 
     <item>
         <shape>
-            <gradient
-                android:startColor="@color/colorBlueGreen"
-                android:endColor="@color/colorSeafoamBlue"
-            />
-            <corners android:radius="@dimen/dimen_radius_button_6dp" />
+            <solid android:color="@color/colorDarkTurquoise_alpha_50" />
+            <corners android:radius="@dimen/dimen_radius_button_4dp" />
         </shape>
 
     </item>
