--- a/app/src/main/res/layout/layout_drawer_menu.xml
+++ b/app/src/main/res/layout/layout_drawer_menu.xml
@@ -35,22 +35,46 @@
             android:textColor="@color/colorOffWhite"
             android:layout_marginTop="@dimen/activity_margin_16dp"/>
 
-        <TextView
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/rlUserAddress"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="5Kb8kLf9zgWQnogidDA76MzPL6eewererwer"
-            android:maxLines="1"
-            android:gravity="center"
-            android:ellipsize="end"
-            android:textSize="@dimen/text_size_default"
-            android:textColor="@color/colorOffWhite"
-            android:drawableLeft="@drawable/ic_location"
             android:layout_marginTop="@dimen/activity_margin_24dp"
-            android:drawablePadding="@dimen/activity_margin_8dp"
-            android:paddingHorizontal="@dimen/activity_margin_16dp"
-            android:paddingVertical="13dp"
             android:background="@drawable/bg_darkTurquoise_shadow_corners"
-            android:visibility="gone"/>
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/tvUserAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="5Kb8kLf9zgWQnogidDA76MzPL6eewererwersfewfwewq"
+                android:maxLines="1"
+                android:gravity="center_vertical"
+                android:ellipsize="end"
+                android:textSize="@dimen/text_size_default"
+                android:textColor="@color/colorOffWhite"
+                android:drawableLeft="@drawable/ic_location"
+                android:drawablePadding="@dimen/activity_margin_8dp"
+                android:paddingHorizontal="@dimen/activity_margin_16dp"
+                android:paddingVertical="13dp"
+                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@+id/tvCopied"/>
+
+            <TextView
+                android:id="@+id/tvCopied"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_Copied"
+                android:layout_alignParentEnd="true"
+                android:gravity="center"
+                android:textColor="@color/colorOffWhite"
+                android:background="@drawable/drawable_bg_address_copied"
+                android:paddingHorizontal="@dimen/activity_margin_16dp"
+                android:paddingVertical="16dp"
+                android:layout_centerVertical="true"
+                android:visibility="gone"/>
+
+        </RelativeLayout>
     </LinearLayout>
 
     <ImageView
@@ -63,6 +87,7 @@
         android:visibility="gone"/>
 
     <LinearLayout
+        android:id="@+id/lnNavigationItemUnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_margin_24dp"
@@ -77,6 +102,7 @@
             android:layout_height="wrap_content"
             android:text="@string/label_button_login"
             android:gravity="center_vertical"
+            android:background="?attr/selectableItemBackground"
             android:drawableLeft="@drawable/ic_user"
             android:drawableTint="@color/colorWhite"
             android:textSize="@dimen/text_size_large"
@@ -93,6 +119,7 @@
             android:text="@string/label_button_create_new_account"
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_plus_circle"
+            android:background="?attr/selectableItemBackground"
             android:drawableTint="@color/colorWhite"
             android:textSize="@dimen/text_size_large"
             android:textColor="@color/colorWhite"
@@ -103,6 +130,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/lnNavigationItemUnexpanded"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_margin_24dp"
@@ -118,6 +146,7 @@
             android:layout_height="wrap_content"
             android:text="@string/label_button_profile"
             android:gravity="center_vertical"
+            android:background="?attr/selectableItemBackground"
             android:drawableLeft="@drawable/ic_user"
             android:drawableTint="@color/colorWhite"
             android:textSize="@dimen/text_size_large"
@@ -133,6 +162,7 @@
             android:layout_height="wrap_content"
             android:text="@string/label_button_collection"
             android:gravity="center_vertical"
+            android:background="?attr/selectableItemBackground"
             android:drawableLeft="@drawable/ic_collection"
             android:drawableTint="@color/colorWhite"
             android:textSize="@dimen/text_size_large"
@@ -148,6 +178,7 @@
             android:layout_height="wrap_content"
             android:text="@string/label_button_card_manage"
             android:gravity="center_vertical"
+            android:background="?attr/selectableItemBackground"
             android:drawableLeft="@drawable/ic_payment_cards"
             android:drawableTint="@color/colorWhite"
             android:textSize="@dimen/text_size_large"
@@ -163,6 +194,7 @@
             android:layout_height="wrap_content"
             android:text="@string/label_button_setting"
             android:gravity="center_vertical"
+            android:background="?attr/selectableItemBackground"
             android:drawableLeft="@drawable/ic_setting"
             android:drawableTint="@color/colorWhite"
             android:textSize="@dimen/text_size_large"
@@ -179,6 +211,7 @@
         android:layout_height="wrap_content"
         android:text="@string/label_button_logout"
         android:gravity="center_vertical"
+        android:background="?attr/selectableItemBackground"
         android:drawableLeft="@drawable/ic_logout"
         android:drawableTint="@color/colorWhite"
         android:textSize="@dimen/text_size_large"
@@ -189,6 +222,88 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="90dp"
         android:visibility="gone"/>
+
+    <LinearLayout
+        android:id="@+id/lnNavigationItemExpanded"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/dimen_radius_button_8dp"
+        app:layout_constraintTop_toBottomOf="@id/lnTopNavigation"
+        android:layout_marginTop="@dimen/activity_margin_32dp"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/ivProfile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/ic_user"
+                android:layout_marginHorizontal="@dimen/dimen_radius_button_8dp"
+                android:paddingVertical="@dimen/activity_margin_12dp"
+                android:background="@drawable/drawable_btn_green_alpha_selector"
+                android:tint="@color/colorWhite"/>
+
+            <ImageView
+                android:id="@+id/ivCollection"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/ic_collection"
+                android:layout_marginHorizontal="@dimen/dimen_radius_button_8dp"
+                android:paddingVertical="@dimen/activity_margin_12dp"
+                android:background="@drawable/drawable_btn_green_alpha_selector"
+                android:tint="@color/colorWhite"/>
+
+            <ImageView
+                android:id="@+id/ivCardManage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/ic_payment_cards"
+                android:layout_marginHorizontal="@dimen/dimen_radius_button_8dp"
+                android:paddingVertical="@dimen/activity_margin_12dp"
+                android:background="@drawable/drawable_btn_green_alpha_selector"
+                android:tint="@color/colorWhite"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_margin_16dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/ivSetting"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/ic_setting"
+                android:layout_marginHorizontal="@dimen/dimen_radius_button_8dp"
+                android:paddingVertical="@dimen/activity_margin_12dp"
+                android:background="@drawable/drawable_btn_green_alpha_selector"
+                android:tint="@color/colorWhite"/>
+
+            <ImageView
+                android:id="@+id/ivLogout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/ic_logout"
+                android:layout_marginHorizontal="@dimen/dimen_radius_button_8dp"
+                android:paddingVertical="@dimen/activity_margin_12dp"
+                android:background="@drawable/drawable_btn_green_alpha_selector"
+                android:tint="@color/colorWhite"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
