--- a/app/src/main/res/layout/layout_drawer_menu.xml
+++ b/app/src/main/res/layout/layout_drawer_menu.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_navigation"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true">
 
     <LinearLayout
         android:id="@+id/lnTopNavigation"
@@ -20,16 +21,35 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/ivAddressNonLogin"
             android:src="@drawable/ic_default_sneaker_header_navigation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_margin_36dp"/>
+            android:layout_marginTop="@dimen/activity_margin_40dp"/>
 
-        <TextView
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cvQrAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Harmen Porter"
+            android:layout_marginTop="@dimen/activity_margin_40dp"
+            app:cardCornerRadius="4dp"
+            app:cardElevation="0dp"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/ivQrAddress"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/qr_code"
+                android:layout_centerInParent="true"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/tvUserName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Welcome Sneakerhead"
             android:textStyle="bold"
             android:textSize="@dimen/text_size_xlarge"
             android:textColor="@color/colorOffWhite"
@@ -47,7 +67,6 @@
                 android:id="@+id/tvUserAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="5Kb8kLf9zgWQnogidDA76MzPL6eewererwersfewfwewq"
                 android:maxLines="1"
                 android:gravity="center_vertical"
                 android:ellipsize="end"
@@ -78,12 +97,15 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/ivExpand"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_expand_down"
         app:layout_constraintTop_toBottomOf="@+id/lnTopNavigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:paddingHorizontal="@dimen/activity_margin_10dp"
+        android:paddingBottom="@dimen/activity_margin_10dp"
         android:visibility="gone"/>
 
     <LinearLayout
