--- a/app/src/main/res/layout/include_bottom_view_scan.xml
+++ b/app/src/main/res/layout/include_bottom_view_scan.xml
@@ -6,10 +6,12 @@
     android:background="@android:color/transparent">
 
     <RelativeLayout
+        android:id="@+id/rlRootBottomView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_margin_48dp"
-        android:background="@drawable/drawable_bg_bottom_view_scan">
+        android:background="@drawable/drawable_bg_bottom_view_scan"
+        android:animateLayoutChanges="true">
 
         <TextView
             android:id="@+id/tvHeaderGuide"
@@ -24,15 +26,17 @@
             android:gravity="center"
             android:text="How to use the scan feature?"
             android:textColor="@android:color/black"
-            android:textSize="@dimen/text_size_large"
-            android:visibility="gone"/>
+            android:textSize="@dimen/text_size_large" />
 
         <RelativeLayout
+            android:id="@+id/rlRootGuide"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_margin_24dp">
+            android:layout_marginTop="@dimen/activity_margin_24dp"
+            android:visibility="gone">
 
             <ImageView
+                android:id="@+id/btnCloseBottomView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -55,6 +59,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/tvContentGuide"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/text_size_large"
@@ -70,9 +75,11 @@
     </RelativeLayout>
 
     <ImageView
+        android:id="@+id/ivGuideImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_guideline_scan_grail"
-        android:layout_marginLeft="@dimen/activity_margin_32dp"/>
+        android:layout_marginLeft="@dimen/activity_margin_32dp"
+        android:visibility="gone"/>
 
 </FrameLayout>
