add response scan private key, change all background to white

--- a/app/src/main/res/layout/include_bottom_view_scan.xml
+++ b/app/src/main/res/layout/include_bottom_view_scan.xml
@@ -41,7 +41,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginRight="@dimen/activity_margin_24dp"
+                android:padding="@dimen/activity_margin_12dp"
+                android:layout_marginRight="@dimen/activity_margin_12dp"
                 android:src="@drawable/ic_close"/>
 
             <TextView
