--- a/app/src/main/res/layout/activity_confirm_register.xml
+++ b/app/src/main/res/layout/activity_confirm_register.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".screens.activity.ConfirmRegisterActivity"
     android:background="@android:color/white"
-    android:paddingTop="@dimen/activity_margin_16dp"
     android:orientation="vertical">
 
     <ImageView
@@ -17,7 +16,7 @@
         android:src="@drawable/ic_close"
         android:layout_gravity="end"
         android:padding="@dimen/activity_margin_12dp"
-        android:layout_marginTop="@dimen/activity_margin_22dp"
+        android:layout_marginTop="@dimen/activity_margin_32dp"
         android:layout_marginRight="@dimen/activity_margin_12dp"/>
 
     <FrameLayout
@@ -52,8 +51,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="115dp"
-        app:cardCornerRadius="4dp"
-        app:cardElevation="10dp">
+        app:cardElevation="15dp"
+        android:background="@android:color/white">
 
         <LinearLayout
             android:layout_width="match_parent"
