--- a/app/src/main/res/layout/activity_custom_scan.xml
+++ b/app/src/main/res/layout/activity_custom_scan.xml
@@ -2,16 +2,18 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
 
     <ImageView
         android:id="@+id/btnClose"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="@dimen/activity_margin_24dp"
-        android:layout_marginTop="@dimen/activity_margin_48dp"
+        android:layout_marginRight="@dimen/activity_margin_12dp"
+        android:padding="@dimen/activity_margin_12dp"
+        android:layout_marginTop="@dimen/activity_margin_32dp"
         android:src="@drawable/ic_close"
         android:tint="@android:color/black" />
 
@@ -32,6 +34,7 @@
         android:id="@+id/zxing_barcode_scanner"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="@dimen/activity_margin_40dp"
         android:layout_below="@+id/tvTitle"
         app:zxing_scanner_layout="@layout/custom_barcode_scanner"/>
 
@@ -40,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/black"
-        android:alpha="0.7"
+        android:alpha="0.6"
         android:visibility="gone"/>
 
     <include
