--- a/app/src/main/res/layout/fragment_import_private_key.xml
+++ b/app/src/main/res/layout/fragment_import_private_key.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:paddingTop="@dimen/activity_margin_18dp"
     android:paddingHorizontal="@dimen/activity_margin_24dp"
+    android:background="@android:color/white"
     tools:context=".screens.fragment.LoginFragment">
 
     <ImageButton
