--- a/app/src/main/res/layout/item_collection.xml
+++ b/app/src/main/res/layout/item_collection.xml
@@ -1,144 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@android:color/transparent">
+
+    <com.wajahatkarim3.easyflipview.EasyFlipView
+        android:id="@+id/flipCard"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:background="@android:color/transparent">
+        app:flipOnTouch="false"
+        app:flipEnabled="true"
+        app:flipDuration="500"
+        app:flipFrom="right"
+        app:flipType="horizontal"
+        app:autoFlipBack="false"
+        android:layout_centerHorizontal="true">
 
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingVertical="10dp"
-            android:paddingHorizontal="20dp"
-            android:layout_marginHorizontal="15dp"
-            android:gravity="center"
-            android:background="@drawable/bubble_background"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+        <!-- Back Layout Goes Here -->
+        <include layout="@layout/flash_card_layout_back"/>
 
-        <ImageView
-                android:id="@+id/ivSneakerImage"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/sneaker_image_sample"/>
+        <!-- Front Layout Goes Here -->
+        <include layout="@layout/flash_card_layout_front"/>
 
-        <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp">
+    </com.wajahatkarim3.easyflipview.EasyFlipView>
 
-            <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvSale"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="10dp"
+        app:cardCornerRadius="6dp"
+        android:layout_below="@+id/flipCard"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/activity_margin_8dp"
+        android:visibility="gone">
 
-                <TextView
-                        android:id="@+id/tvSneakerId"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/colorGreyTitle"
-                        android:layout_alignParentStart="true"
-                        android:layout_toStartOf="@+id/tvIsLimited"/>
+        <TextView
+            android:id="@+id/btnItemSale"
+            android:layout_width="210dp"
+            android:layout_height="30dp"
+            android:background="@drawable/drawable_btn_green_gradient_selector"
+            android:text="@string/label_sale"
+            android:textSize="@dimen/text_size_large"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:gravity="center" />
 
-                <TextView
-                        android:id="@+id/tvIsLimited"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:text="(Limited)"
-                        android:textStyle="bold|italic"
-                        android:textColor="@color/colorGreen"
-                        android:visibility="gone"
-                        android:layout_alignParentEnd="true"/>
+    </androidx.cardview.widget.CardView>
 
-            </RelativeLayout>
+    <TextView
+        android:id="@+id/btnItemStolen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_item_stolen"
+        android:textColor="@color/scarlet"
+        android:textSize="@dimen/text_size_large"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/cvSale"
+        android:layout_marginTop="@dimen/activity_margin_16dp"
+        android:layout_marginBottom="@dimen/activity_margin_22dp"
+        android:visibility="gone"/>
 
-            <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cvFound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="10dp"
+        app:cardCornerRadius="6dp"
+        android:layout_below="@+id/flipCard"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/activity_margin_8dp"
+        android:layout_marginBottom="@dimen/activity_margin_22dp"
+        android:visibility="gone">
 
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@android:color/white"
-                        android:id="@+id/tvSneakerName"
-                        android:layout_alignParentStart="true"
-                        android:layout_toStartOf="@+id/tvSneakerCondition"/>
+        <TextView
+            android:id="@+id/btnItemFound"
+            android:layout_width="210dp"
+            android:layout_height="30dp"
+            android:background="@drawable/drawable_btn_green_gradient_selector"
+            android:text="@string/label_item_found"
+            android:textSize="@dimen/text_size_large"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:gravity="center" />
 
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:textColor="@android:color/white"
-                        android:id="@+id/tvSneakerCondition"
-                        android:layout_alignParentEnd="true"/>
+    </androidx.cardview.widget.CardView>
 
-            </RelativeLayout>
-
-            <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-
-                <TextView
-                        android:id="@+id/tvSneakerSize"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@android:color/white"
-                        android:layout_alignParentStart="true"
-                        android:layout_toStartOf="@+id/tvReleaseDate"/>
-
-                <TextView
-                        android:id="@+id/tvReleaseDate"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
-                        android:textColor="@android:color/white"
-                        android:layout_alignParentEnd="true"/>
-
-            </RelativeLayout>
-
-            <TextView
-                    android:id="@+id/tvSneakerBrand"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@android:color/white"/>
-
-            <FrameLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end">
-
-                <TextView
-                        android:id="@+id/tvReportStolen"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:text="Report Stolen"
-                        android:background="@drawable/report_stolen_button"
-                        android:textColor="@android:color/white"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:lines="1"
-                        android:textSize="10dp"
-                        android:paddingVertical="3dp"
-                        android:paddingStart="30dp"
-                        android:paddingEnd="8dp"
-                />
-
-                <ImageView
-                        android:id="@+id/btnReportStolen"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:padding="5dp"
-                        android:background="@drawable/circle_button"
-                        android:src="@drawable/ic_report_stolen"/>
-
-            </FrameLayout>
-
-        </LinearLayout>
-    </LinearLayout>
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
