--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,7 @@
     <dimen name="text_size_24">24sp</dimen>
     <dimen name="text_size_big">32sp</dimen>
 
+    <dimen name="activity_margin_4dp">4dp</dimen>
     <dimen name="activity_margin_5dp">5dp</dimen>
     <dimen name="activity_margin_8dp">8dp</dimen>
     <dimen name="activity_margin_10dp">10dp</dimen>
